syntax = "proto3";

package ad;
option go_package = "lesson9/homework/internal/ports/grpc";
import "google/protobuf/timestamp.proto";

service AdService {
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (AdResponse) {}
  rpc ListAds(FilterRequest) returns (ListAdResponse) {}
  rpc GetAdByID(GetAdRequest) returns (AdResponse) {}
  rpc CreateUser(UniversalUser) returns (UniversalUser) {}
  rpc DeleteUserByID(DeleteUserRequest) returns (UniversalUser) {}
  rpc ChangeUserInfo(UniversalUser) returns (UniversalUser) {}
  rpc GetAdsByTitle(AdsByTitleRequest) returns (ListAdResponse) {}
  rpc GetUserByID(GetUserRequest) returns (UniversalUser) {}
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message UniversalUser {
  string nickname = 1;
  string email = 2;
  int64  user_id = 3;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 author_id = 4;
  bool published = 5;
  google.protobuf.Timestamp creation_date = 6;
  google.protobuf.Timestamp update_date = 7;
}

enum publishedConfig {
  NotGiven = 0;
  PublishedOnly = 1;
  AllAds = 2;
}

message FilterRequest {
  publishedConfig published_config = 1;
  int64 author_id = 2;
  google.protobuf.Timestamp l_date = 3;
  google.protobuf.Timestamp r_date = 4;
}

message AdsByTitleRequest {
  string title = 1;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetAdRequest {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteAdRequest {
  int64 user_id = 1;
  int64 ad_id = 2;
}